--- a/config/ExperimentUi_ExptConfigGuiTemplate.yml
+++ b/config/ExperimentUi_ExptConfigGuiTemplate.yml
@@ -106,6 +106,12 @@ hardware:
         ipAddress: str
         port: str
 
+  QITI Four Rod Oven Controller:
+    description: Interface with the BK precision power supply via Rpi. Check https://github.com/QITI/four_rod_oven_controller
+    fields:
+        ipAddress: str
+        port: str
+
   QITI RF Controller:
     description: Interface with a Raspberry Pi server that controls the PLL RF devices. Check https://github.com/QITI/rf_controller
     fields:
