--- a/environment.yml
+++ b/environment.yml
@@ -29,6 +29,8 @@ dependencies:
     - influxdb
     - grpcio-tools
     - pythonnet
+    - paho-mqtt
+    - zmq
     - plotly==3.7.1
     - https://gitlab.com/pmaunz/pyGSTi/uploads/f9d6b16f60fa3ef3033607afcf2a9da9/pyGSTi-0.9.4.4-cp36-cp36m-win_amd64.whl
     - "-e git+https://gitlab.com/pmaunz/pint#egg=pint"
